# number-theory

./: B.py  E.py  README.md  nextPrime.py  piprime.py  prime.py  pyproject.toml  zeta.py  zigzag.py
number_theory/: B.py  E.py  __init__.py  bernoulli.py  nextPrime.py  piprime.py  zeta.py
